objects/adapps__OptimizerPlus_Summary__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Feature_ApiName__c</fullName>
        <label>Feature ApiName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Feature_Name__c</fullName>
        <label>Feature Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Feature_Type__c</fullName>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Feature</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Implementation_Effort__c</fullName>
        <label>Implementation Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Implementation_Effort</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Optimizer_Report__c</fullName>
        <label>Optimizer Report</label>
        <referenceTo>adapps__Optimizer_Report__c</referenceTo>
        <relationshipLabel>OptimizerPlus Summaries</relationshipLabel>
        <relationshipName>OptimizerPlus_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <label>OptimizerPlus Summary</label>
    <nameField>
        <label>OptimizerPlus Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OptimizerPlus Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>